force-app/main/default/objects/Plot_Scan__c/Plot_Scan__c.object-meta.xml
<CustomObject>
    <label>Plot Scan</label>
    <nameField>
        <displayFormat>SCAN{000000}</displayFormat>
        <label>Plot Scan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plot Scans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>