force-app/main/default/objects/Plot_Scan__c/fields/Explore_Plot__c.field-meta.xml
<CustomField>
    <fullName>Explore_Plot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Explore Plot</label>
    <referenceTo>Explore_Plot_Cell__c</referenceTo>
    <relationshipLabel>Plot Scans</relationshipLabel>
    <relationshipName>Plot_Scans</relationshipName>
    <type>Lookup</type>
</CustomField>