force-app/main/default/objects/Plot_Scan__c/fields/Plot_Exploration__c.field-meta.xml
<CustomField>
    <fullName>Plot_Exploration__c</fullName>
    <label>Plot Exploration</label>
    <referenceTo>Plot_Exploration__c</referenceTo>
    <relationshipLabel>Plot Scans</relationshipLabel>
    <relationshipName>Plot_Scans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>