force-app/main/default/objects/Plot_Scan__c/fields/Variety_Name__c.field-meta.xml
<CustomField>
    <fullName>Variety_Name__c</fullName>
    <formula>Explore_Plot__r.Variety__r.Name</formula>
    <label>Variety Name</label>
    <type>Text</type>
</CustomField>